assembler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> function
Rule 1     function -> DEF ID LPAREN RPAREN COLON statements RETURN expression
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> ID EQUALS expression
Rule 5     expression -> expression ADD expression
Rule 6     expression -> expression SUB expression
Rule 7     expression -> expression MUL expression
Rule 8     expression -> expression DIV expression
Rule 9     expression -> expression REM expression
Rule 10    expression -> expression SHR expression
Rule 11    expression -> expression SHL expression
Rule 12    expression -> expression AND expression
Rule 13    expression -> expression OR expression
Rule 14    expression -> expression XOR expression
Rule 15    expression -> NEG expression
Rule 16    expression -> NOT expression
Rule 17    expression -> LPAREN expression RPAREN
Rule 18    expression -> NUMBER
Rule 19    expression -> ID

Terminals, with rules where they appear

ADD                  : 5
AND                  : 12
COLON                : 1
DEF                  : 1
DIV                  : 8
EQUALS               : 4
ID                   : 1 4 19
LPAREN               : 1 17
MUL                  : 7
NEG                  : 15
NOT                  : 16
NUMBER               : 18
OR                   : 13
REM                  : 9
RETURN               : 1
RPAREN               : 1 17
SHL                  : 11
SHR                  : 10
SUB                  : 6
XOR                  : 14
error                : 

Nonterminals, with rules where they appear

expression           : 1 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 16 17
function             : 0
statement            : 2 3
statements           : 1 2

Parsing method: LALR

state 0

    (0) S' -> . function
    (1) function -> . DEF ID LPAREN RPAREN COLON statements RETURN expression

    DEF             shift and go to state 2

    function                       shift and go to state 1

state 1

    (0) S' -> function .



state 2

    (1) function -> DEF . ID LPAREN RPAREN COLON statements RETURN expression

    ID              shift and go to state 3


state 3

    (1) function -> DEF ID . LPAREN RPAREN COLON statements RETURN expression

    LPAREN          shift and go to state 4


state 4

    (1) function -> DEF ID LPAREN . RPAREN COLON statements RETURN expression

    RPAREN          shift and go to state 5


state 5

    (1) function -> DEF ID LPAREN RPAREN . COLON statements RETURN expression

    COLON           shift and go to state 6


state 6

    (1) function -> DEF ID LPAREN RPAREN COLON . statements RETURN expression
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . ID EQUALS expression

    ID              shift and go to state 7

    statements                     shift and go to state 8
    statement                      shift and go to state 9

state 7

    (4) statement -> ID . EQUALS expression

    EQUALS          shift and go to state 10


state 8

    (1) function -> DEF ID LPAREN RPAREN COLON statements . RETURN expression
    (2) statements -> statements . statement
    (4) statement -> . ID EQUALS expression

    RETURN          shift and go to state 11
    ID              shift and go to state 7

    statement                      shift and go to state 12

state 9

    (3) statements -> statement .

    RETURN          reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)


state 10

    (4) statement -> ID EQUALS . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 14

state 11

    (1) function -> DEF ID LPAREN RPAREN COLON statements RETURN . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 19

state 12

    (2) statements -> statements statement .

    RETURN          reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)


state 13

    (19) expression -> ID .

    ADD             reduce using rule 19 (expression -> ID .)
    SUB             reduce using rule 19 (expression -> ID .)
    MUL             reduce using rule 19 (expression -> ID .)
    DIV             reduce using rule 19 (expression -> ID .)
    REM             reduce using rule 19 (expression -> ID .)
    SHR             reduce using rule 19 (expression -> ID .)
    SHL             reduce using rule 19 (expression -> ID .)
    AND             reduce using rule 19 (expression -> ID .)
    OR              reduce using rule 19 (expression -> ID .)
    XOR             reduce using rule 19 (expression -> ID .)
    RETURN          reduce using rule 19 (expression -> ID .)
    ID              reduce using rule 19 (expression -> ID .)
    $end            reduce using rule 19 (expression -> ID .)
    RPAREN          reduce using rule 19 (expression -> ID .)


state 14

    (4) statement -> ID EQUALS expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . REM expression
    (10) expression -> expression . SHR expression
    (11) expression -> expression . SHL expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression

    RETURN          reduce using rule 4 (statement -> ID EQUALS expression .)
    ID              reduce using rule 4 (statement -> ID EQUALS expression .)
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    REM             shift and go to state 24
    SHR             shift and go to state 25
    SHL             shift and go to state 26
    AND             shift and go to state 27
    OR              shift and go to state 28
    XOR             shift and go to state 29


state 15

    (15) expression -> NEG . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 30

state 16

    (16) expression -> NOT . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 31

state 17

    (17) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 32

state 18

    (18) expression -> NUMBER .

    ADD             reduce using rule 18 (expression -> NUMBER .)
    SUB             reduce using rule 18 (expression -> NUMBER .)
    MUL             reduce using rule 18 (expression -> NUMBER .)
    DIV             reduce using rule 18 (expression -> NUMBER .)
    REM             reduce using rule 18 (expression -> NUMBER .)
    SHR             reduce using rule 18 (expression -> NUMBER .)
    SHL             reduce using rule 18 (expression -> NUMBER .)
    AND             reduce using rule 18 (expression -> NUMBER .)
    OR              reduce using rule 18 (expression -> NUMBER .)
    XOR             reduce using rule 18 (expression -> NUMBER .)
    RETURN          reduce using rule 18 (expression -> NUMBER .)
    ID              reduce using rule 18 (expression -> NUMBER .)
    $end            reduce using rule 18 (expression -> NUMBER .)
    RPAREN          reduce using rule 18 (expression -> NUMBER .)


state 19

    (1) function -> DEF ID LPAREN RPAREN COLON statements RETURN expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . REM expression
    (10) expression -> expression . SHR expression
    (11) expression -> expression . SHL expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression

    $end            reduce using rule 1 (function -> DEF ID LPAREN RPAREN COLON statements RETURN expression .)
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    REM             shift and go to state 24
    SHR             shift and go to state 25
    SHL             shift and go to state 26
    AND             shift and go to state 27
    OR              shift and go to state 28
    XOR             shift and go to state 29


state 20

    (5) expression -> expression ADD . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 33

state 21

    (6) expression -> expression SUB . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 34

state 22

    (7) expression -> expression MUL . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 35

state 23

    (8) expression -> expression DIV . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 36

state 24

    (9) expression -> expression REM . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 37

state 25

    (10) expression -> expression SHR . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 38

state 26

    (11) expression -> expression SHL . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 39

state 27

    (12) expression -> expression AND . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 40

state 28

    (13) expression -> expression OR . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 41

state 29

    (14) expression -> expression XOR . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . expression REM expression
    (10) expression -> . expression SHR expression
    (11) expression -> . expression SHL expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . NEG expression
    (16) expression -> . NOT expression
    (17) expression -> . LPAREN expression RPAREN
    (18) expression -> . NUMBER
    (19) expression -> . ID

    NEG             shift and go to state 15
    NOT             shift and go to state 16
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 18
    ID              shift and go to state 13

    expression                     shift and go to state 42

state 30

    (15) expression -> NEG expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . REM expression
    (10) expression -> expression . SHR expression
    (11) expression -> expression . SHL expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression

    ADD             reduce using rule 15 (expression -> NEG expression .)
    SUB             reduce using rule 15 (expression -> NEG expression .)
    MUL             reduce using rule 15 (expression -> NEG expression .)
    DIV             reduce using rule 15 (expression -> NEG expression .)
    REM             reduce using rule 15 (expression -> NEG expression .)
    SHR             reduce using rule 15 (expression -> NEG expression .)
    SHL             reduce using rule 15 (expression -> NEG expression .)
    AND             reduce using rule 15 (expression -> NEG expression .)
    OR              reduce using rule 15 (expression -> NEG expression .)
    XOR             reduce using rule 15 (expression -> NEG expression .)
    RETURN          reduce using rule 15 (expression -> NEG expression .)
    ID              reduce using rule 15 (expression -> NEG expression .)
    $end            reduce using rule 15 (expression -> NEG expression .)
    RPAREN          reduce using rule 15 (expression -> NEG expression .)

  ! ADD             [ shift and go to state 20 ]
  ! SUB             [ shift and go to state 21 ]
  ! MUL             [ shift and go to state 22 ]
  ! DIV             [ shift and go to state 23 ]
  ! REM             [ shift and go to state 24 ]
  ! SHR             [ shift and go to state 25 ]
  ! SHL             [ shift and go to state 26 ]
  ! AND             [ shift and go to state 27 ]
  ! OR              [ shift and go to state 28 ]
  ! XOR             [ shift and go to state 29 ]


state 31

    (16) expression -> NOT expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . REM expression
    (10) expression -> expression . SHR expression
    (11) expression -> expression . SHL expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression

    ADD             reduce using rule 16 (expression -> NOT expression .)
    SUB             reduce using rule 16 (expression -> NOT expression .)
    MUL             reduce using rule 16 (expression -> NOT expression .)
    DIV             reduce using rule 16 (expression -> NOT expression .)
    REM             reduce using rule 16 (expression -> NOT expression .)
    SHR             reduce using rule 16 (expression -> NOT expression .)
    SHL             reduce using rule 16 (expression -> NOT expression .)
    AND             reduce using rule 16 (expression -> NOT expression .)
    OR              reduce using rule 16 (expression -> NOT expression .)
    XOR             reduce using rule 16 (expression -> NOT expression .)
    RETURN          reduce using rule 16 (expression -> NOT expression .)
    ID              reduce using rule 16 (expression -> NOT expression .)
    $end            reduce using rule 16 (expression -> NOT expression .)
    RPAREN          reduce using rule 16 (expression -> NOT expression .)

  ! ADD             [ shift and go to state 20 ]
  ! SUB             [ shift and go to state 21 ]
  ! MUL             [ shift and go to state 22 ]
  ! DIV             [ shift and go to state 23 ]
  ! REM             [ shift and go to state 24 ]
  ! SHR             [ shift and go to state 25 ]
  ! SHL             [ shift and go to state 26 ]
  ! AND             [ shift and go to state 27 ]
  ! OR              [ shift and go to state 28 ]
  ! XOR             [ shift and go to state 29 ]


state 32

    (17) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . REM expression
    (10) expression -> expression . SHR expression
    (11) expression -> expression . SHL expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression

    RPAREN          shift and go to state 43
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    REM             shift and go to state 24
    SHR             shift and go to state 25
    SHL             shift and go to state 26
    AND             shift and go to state 27
    OR              shift and go to state 28
    XOR             shift and go to state 29


state 33

    (5) expression -> expression ADD expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . REM expression
    (10) expression -> expression . SHR expression
    (11) expression -> expression . SHL expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression

    ADD             reduce using rule 5 (expression -> expression ADD expression .)
    SUB             reduce using rule 5 (expression -> expression ADD expression .)
    SHR             reduce using rule 5 (expression -> expression ADD expression .)
    SHL             reduce using rule 5 (expression -> expression ADD expression .)
    AND             reduce using rule 5 (expression -> expression ADD expression .)
    OR              reduce using rule 5 (expression -> expression ADD expression .)
    XOR             reduce using rule 5 (expression -> expression ADD expression .)
    RETURN          reduce using rule 5 (expression -> expression ADD expression .)
    ID              reduce using rule 5 (expression -> expression ADD expression .)
    $end            reduce using rule 5 (expression -> expression ADD expression .)
    RPAREN          reduce using rule 5 (expression -> expression ADD expression .)
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    REM             shift and go to state 24

  ! MUL             [ reduce using rule 5 (expression -> expression ADD expression .) ]
  ! DIV             [ reduce using rule 5 (expression -> expression ADD expression .) ]
  ! REM             [ reduce using rule 5 (expression -> expression ADD expression .) ]
  ! ADD             [ shift and go to state 20 ]
  ! SUB             [ shift and go to state 21 ]
  ! SHR             [ shift and go to state 25 ]
  ! SHL             [ shift and go to state 26 ]
  ! AND             [ shift and go to state 27 ]
  ! OR              [ shift and go to state 28 ]
  ! XOR             [ shift and go to state 29 ]


state 34

    (6) expression -> expression SUB expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . REM expression
    (10) expression -> expression . SHR expression
    (11) expression -> expression . SHL expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression

    ADD             reduce using rule 6 (expression -> expression SUB expression .)
    SUB             reduce using rule 6 (expression -> expression SUB expression .)
    SHR             reduce using rule 6 (expression -> expression SUB expression .)
    SHL             reduce using rule 6 (expression -> expression SUB expression .)
    AND             reduce using rule 6 (expression -> expression SUB expression .)
    OR              reduce using rule 6 (expression -> expression SUB expression .)
    XOR             reduce using rule 6 (expression -> expression SUB expression .)
    RETURN          reduce using rule 6 (expression -> expression SUB expression .)
    ID              reduce using rule 6 (expression -> expression SUB expression .)
    $end            reduce using rule 6 (expression -> expression SUB expression .)
    RPAREN          reduce using rule 6 (expression -> expression SUB expression .)
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    REM             shift and go to state 24

  ! MUL             [ reduce using rule 6 (expression -> expression SUB expression .) ]
  ! DIV             [ reduce using rule 6 (expression -> expression SUB expression .) ]
  ! REM             [ reduce using rule 6 (expression -> expression SUB expression .) ]
  ! ADD             [ shift and go to state 20 ]
  ! SUB             [ shift and go to state 21 ]
  ! SHR             [ shift and go to state 25 ]
  ! SHL             [ shift and go to state 26 ]
  ! AND             [ shift and go to state 27 ]
  ! OR              [ shift and go to state 28 ]
  ! XOR             [ shift and go to state 29 ]


state 35

    (7) expression -> expression MUL expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression
    (9) expression -> expression . REM expression
    (10) expression -> expression . SHR expression
    (11) expression -> expression . SHL expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression

    ADD             reduce using rule 7 (expression -> expression MUL expression .)
    SUB             reduce using rule 7 (expression -> expression MUL expression .)
    MUL             reduce using rule 7 (expression -> expression MUL expression .)
    DIV             reduce using rule 7 (expression -> expression MUL expression .)
    REM             reduce using rule 7 (expression -> expression MUL expression .)
    SHR             reduce using rule 7 (expression -> expression MUL expression .)
    SHL             reduce using rule 7 (expression -> expression MUL expression .)
    AND             reduce using rule 7 (expression -> expression MUL expression .)
    OR              reduce using rule 7 (expression -> expression MUL expression .)
    XOR             reduce using rule 7 (expression -> expression MUL expression .)
    RETURN          reduce using rule 7 (expression -> expression MUL expression .)
    ID              reduce using rule 7 (expression -> expression MUL expression .)
    $end            reduce using rule 7 (expression -> expression MUL expression .)
    RPAREN          reduce using rule 7 (expression -> expression MUL expression .)
